[fix] header alignment

--- a/tinyflix-front/src/app/pages/movie-detail/movie-detail.component.scss
+++ b/tinyflix-front/src/app/pages/movie-detail/movie-detail.component.scss
@@ -67,6 +67,7 @@ $transition-time: 0.3s;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
 
     h1 {
+      text-align: center;
       font-family: bayon;
       letter-spacing: 1px;
       font-weight: regular;
@@ -75,6 +76,7 @@ $transition-time: 0.3s;
       color: white;
       display: inline-block;
       margin-left: 2em;
+      margin-right: 2em;
       margin-top: 0.5em;
       text-shadow:
         0 0 10px #83c5be,
@@ -90,6 +92,7 @@ $transition-time: 0.3s;
 
       h2 {
         font-size: 2.5em;
+
         color: $text-color;
         font-family: bayon;
         margin-bottom: 0.5em;
